# aoc-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: algorithms.md  coordinates.md  data_io.md  migration.md  testing.md
examples/: README.md  template_solution.py
src/aoc/: __init__.py  coord.py  d2.py  d3.py  data.py  graph.py  grid.py  input.py  math.py  ranges.py  testing.py
tests/: __init__.py  test_coord.py  test_d2.py  test_d3.py  test_graph.py  test_grid.py  test_input_parsers.py  test_math.py  test_ranges.py  test_testing.py
tests/data/: test_pipe_rules_ordering  test_regex_groups_position_velocity  test_sections_three_parts  test_structured_ints_position_velocity
